@@ -1,0 +1,1 @@
+twistd -noy bin/bot-prakasha.tac
